<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="exhibit"
            type="wgu.jbas127.frontiercompanion.data.entities.Exhibit" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:id="@+id/image_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            imageUrl="@{exhibit.imageResName}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingVertical="16dp"
            android:paddingStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/exhibit_title_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/text_exhibit_era"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel_semibold"
                android:text="@{exhibit.era}"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_exhibit_name"
                tools:layout_editor_absoluteX="24dp"
                tools:text="1750s" />

            <TextView
                android:id="@+id/text_exhibit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel_semibold"
                android:text="@{exhibit.name}"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@+id/text_exhibit_location"
                tools:layout_editor_absoluteX="16dp"
                tools:text="Irish Forge" />

            <TextView
                android:id="@+id/text_exhibit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel_semibold"
                android:text="@{exhibit.location}"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="-12dp"
                tools:text="County Fermanagh, Ulster" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="120dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-24dp">

<!--            TODO: Enable Locate On Map button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_locate_map"
                style="@style/ThemeOverlay.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="Locate on Map"
                app:backgroundTint="@color/md_theme_secondary"
                app:icon="@drawable/ic_add_location"
                app:iconGravity="textStart"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="585dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create_route"
                style="@style/ThemeOverlay.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Create Route"
                android:enabled="false"
                app:backgroundTint="@color/md_theme_surfaceBright"
                app:icon="@drawable/ic_create_route"
                app:iconGravity="textStart"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="647dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>