...
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Related Articles"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_articles"
...
                android:id="@+id/button_create_route_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Route" />

            <Button
                android:id="@+id/button_back_to_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back to Top" />

        </LinearLayout>

...
